nxgw-envoy-zipkin.yaml
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 80
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          generate_request_id: true
          tracing:
            operation_name: egress
          codec_type: auto
          stat_prefix: egress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: backend
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/trace/1"
                route:
                  cluster: ServiceA
              - match:
                  prefix: "/trace/2"
                route:
                  cluster: ServiceB
              - match:
                  prefix: "/trace/3"
                route:
                  cluster: ServiceC
              - match:
                  prefix: "/test"
                route:
                  cluster: ServiceC
          http_filters:
          - name: envoy.router
            config: {}
  clusters:
  - name: ServiceA
    connect_timeout: 0.250s
    type: strict_dns
    lb_policy: round_robin
    http2_protocol_options: {}
    hosts:
    - socket_address:
        address: servicea
        port_value: 80
  - name: ServiceB
    connect_timeout: 0.250s
    type: strict_dns
    lb_policy: round_robin
    http2_protocol_options: {}
    hosts:
    - socket_address:
        address: serviceb
        port_value: 80
  - name: ServiceC
    connect_timeout: 0.250s
    type: strict_dns
    lb_policy: round_robin
    http2_protocol_options: {}
    hosts:
    - socket_address:
        address: servicec
        port_value: 80
  - name: zipkin
    connect_timeout: 1s
    type: strict_dns
    lb_policy: round_robin
    hosts:
    - socket_address:
        address: zipkin
        port_value: 9411
tracing:
  http:
    name: envoy.zipkin
    config:
      collector_cluster: zipkin
      collector_endpoint: "/api/v1/spans"
admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901
