service2-envoy-zipkin.yaml
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 80
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          tracing:
            operation_name: ingress
          codec_type: auto
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: service2
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: local_service
                decorator:
                  operation: checkStock
          http_filters:
          - name: envoy.router
            config: {}
  clusters:
  - name: local_service
    connect_timeout: 0.250s
    type: strict_dns
    lb_policy: round_robin
    hosts:
    - socket_address:
        address: 127.0.0.1
        port_value: 8080
#   - name: zipkin
#     connect_timeout: 1s
#     type: strict_dns
#     lb_policy: round_robin
#     hosts:
#     - socket_address:
#         address: 127.0.0.1
#         port_value: 9411
# tracing:
#   http:
#     name: envoy.zipkin
#     config:
#       collector_cluster: zipkin
#       collector_endpoint: "/api/v1/spans"
tracing:
  http:
    name: envoy.local
    config:
      collector_cluster: local
      collector_endpoint: /var/log/trace_log.log
admin:
  access_log_path: "/var/log/envoy_log.log"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001
